<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/description"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cost_of_service"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/custo_do_servi_o"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <TextView

        android:id="@+id/service_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/como_estava_o_servi_o"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cost_of_service" />

    <TableLayout
        android:id="@+id/table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/service_question">

        <TableRow android:id="@+id/table_item"
            android:layout_marginTop="16dp">

            <RadioGroup
                android:id="@+id/tip_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@id/tip_choise_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/service_question">

                <RadioButton
                    android:id="@+id/tip_choise_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amazing_20" />

                <RadioButton
                    android:id="@+id/tip_choise_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/good_18" />

                <RadioButton
                    android:id="@+id/tip_choise_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/okay_15" />

                <RadioButton
                    android:id="@+id/tip_choise_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/normal_10" />

                <RadioButton
                    android:id="@+id/tip_choise_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/awfull_0" />
            </RadioGroup>

            <ImageView
                android:layout_width="109dp"
                android:layout_height="229dp"
                android:contentDescription="@string/waiter"
                android:gravity="end"
                android:rotationY="154"
                android:src="@drawable/ic_waiter" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="12dp"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_marginStart="4dp"
                android:id="@+id/tip_amount_final_cost"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                tools:text="@string/tip_amount" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_choise"
                android:layout_width="200dp"
                android:layout_height="25dp"
                android:checked="true"
                android:gravity="end"
                android:text="@string/arredondar_gorjeta" />


        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/calculate_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/table_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>